2007-02-12  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Add ocamlmktop support.

	* ocamlbuild.mltop: New.
	* main.ml: Handle .top as binaries.
	* ocaml_compiler.ml,
	* ocaml_specific.ml,
	* ocaml_compiler.mli: Add mktop functions and rules.
	* options.ml,
	* signatures.mli: Add an ocamlmktop option.

2007-02-09  Berke Durak  <berke.durak@inria.fr>

	Was attempting to link with threads.cmxa in byte mode.

	* ocaml_specific.ml: .

2007-02-09  Berke Durak  <berke.durak@inria.fr>

	Talking of sterilize.sh.

	* manual/manual.tex: .

2007-02-09  Berke Durak  <berke.durak@inria.fr>

	Rewrote some parts, filled the abstract, moved rantings to the appendix.

	* manual/manual.tex: .
	* .vcs: .

2007-02-08  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Add manual/manual.hva.

	* manual/manual.hva: New.

2007-02-08  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Changes done with Luc.

	* manual/manual.tex: .
	* manual/Makefile: .

2007-02-08  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Fix a bug found by Luc in hevea.

	* ocaml_utils.ml,
	* ocaml_utils.mli: Change keep_this_module into module_importance to
	have a finer grain.
	* ocaml_compiler.ml: Update to importance.
	* ocamldep.ml,
	* ocamldep.mli: We now try to also build stdlib modules but don't fail
	if they don't exists.
	* test/test5/stack.ml: New.
	* test/test5/a.ml: A test case (from hevea).
	* test/good-output: Update.

2007-02-08  Nicolas Pouillard  <nicolas.pouillard@gmail.com>

	Ocamldoc, extension:* tag ...

	* ocaml_tools.mli,
	* ocaml_tools.ml: The ocamldoc support now takes into account two modes
	*d and -o.
	* ocaml_specific.ml: Two more rules and many flags for some of the
	standard behaviors.
	* signatures.mli: Some comments.
	* tools.ml: Add the extension:* tag.
	* TODO: Update.

2007-02-08  Berke Durak  <berke.durak@inria.fr>

	Hygiene generates sterilize.sh.

	* fda.ml: .
	* fda.mli: .
	* hygiene.ml: .
	* hygiene.mli: .
	* main.ml: .
	* options.ml: .
	* signatures.mli: .
