@@ -76,9 +76,8 @@ let ocamlopt_link_lib = ocamlopt_link (A"-a")
 let ocamlopt_link_prog = ocamlopt_link N
 
 let ocamlopt_p tags deps out =
-  let include_flags = List.fold_right begin fun dep ->
-    ocaml_add_include_flag (Pathname.dirname dep)
-  end deps [] in
+  let dirnames = List.union [] (List.map Pathname.dirname deps) in
+  let include_flags = List.fold_right ocaml_add_include_flag dirnames [] in
   let cmi = cmi_of out and cmitmp = Pathname.update_extensions "cmitmp" out in
   Seq[mv cmi cmitmp;
       Cmd (S [!Options.ocamlopt; A"-pack"; forpack_flags out tags; T tags; S include_flags;
